# haskeline-readert

./: .gitignore  README.md  cabal.project  haskeline-readert.cabal  hie.yaml
.github/workflows/: ci.yaml
app/: Main.hs
src/Haskeline/: Class.hs
src/Haskeline/Bluefin/: Dynamic.hs  Static.hs
src/Haskeline/Effectful/: Dynamic.hs  Static.hs
